[package]
name = "ethernaut-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "0.5.3"
ethers-core = "0.5.4"
ethers-contract = "0.5.3"
ethers-signers = "0.5.3"
ethers-providers = "0.5.3"
ethers-middleware = "0.5.3"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
# ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
# ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
# ethers-contract  = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
# ethers-signers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
# ethers-providers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
